tests/passing/generics_type_def_same_multi_use.tails
type A<T> = *T
type B<T> = T

func tests() -> unit:
  -- A
  let a: A<int> = null
  let b: A<A<int>> = null
  let c: A<A<A<int>>> = null
  let d: *A<int> = null
  let e: *A<A<int>> = null
  let f: *A<*A<int>> = null

  -- B
  let g: B<B<int>> = 123
