tests/failing/type_def_generics_mutually_recursive_usage.tails
type A<T> = B<T>
type B<T> = A<T>

func tests() -> unit:
  let a: A<int> = 123

  pass
